# Lattice

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  lattice_bridge.ts  lattice_client_server_interface.ts  lattice_devtools.html  lattice_engine_core.rs  lattice_htn_example.ts  lattice_workflow_example.ts  package-lock.json  package.json  tsconfig.json
docs/: RELEASE_NOTES_v0.1.0.md  STRATEGY.md  VISION.md
src/: agent.rs  environment.rs  lib.rs  main.rs  memory.rs  planner.rs  skill_tree.rs  tool.rs  wasm.rs
