[package]
name = "lattice"
version = "0.1.0"
edition = "2024"

[lib]
name = "lattice"
path = "lattice_engine_core.rs"
crate-type = ["rlib", "cdylib"]

# Persistent TCP IPC planning daemon. Named distinctly from the `lattice`
# lib target to avoid an output-filename collision on Windows (.pdb).
[[bin]]
name = "lattice-daemon"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
